codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_only_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 2358
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interrupt)               
                                                
                                                
› 向 云 熙 专 利 智 能 体 提 出 任 何 需 求                   
                                                
  ? for shortcuts            100% context left
